# emotional-conversation-processor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLEX_LINTING_ISSUES.md  CONTINUATION_PROMPT.md  ClaudeEmotionAnalyzer.md  ClaudeTestDataCalibrator.md  HUMAN_INTERVENTION_REQUEST.md  INTEGRATION_TESTING_INSIGHTS.md  Insights.md  Makefile  PackagingFixesRequiredForEmotionalProcessor.md  README.md  TEST_TYPE_ANNOTATION_EXAMPLES.md  conversation_format_analysis.md  deploy_project_structure.py  migrate_to_uv_ruff_script.sh  organize_project_files.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_coverage.py  run_coverage.sh  setup.py  updated_development_readme.md  verify_project_structure.sh
.github/workflows/: ci.yml  python-package.yml
ForCassieOnly/: 550e8400-e29b-41d4-a716-446655440000_core_memory.md
config/: development.yaml  testing.yaml
data/raw/conversations/: PreservationInstruction_CoraClaude_fb83ec9b-9c1b-40f3-a51f-68293d2744c6.md
diagrams/: conversation-export-sequence.mermaid  conversation-replay-sequence.mermaid  emotion-aware-embedding-sequence.mermaid  llm-conversation-system-design-v2.md  llm-conversation-system-diagram.mermaid  technical-data-curation-sequence.mermaid
docker/: Dockerfile  docker-compose.yml
docs/architecture/: COVERAGE_GUIDE.md
docs/insights/: replay_conversation_insights.md
emotional_processor/core/: models.py
emotional_processor/embeddings/: emotion_aware_embedder.py
emotional_processor/processors/: conversation_segmenter.py  emotion_classifier.py  technical_detector.py
emotional_processor/storage/: vector_store.py
scripts/: Helfpul_Honest_Harmless.rtf  README.md  claude_conversation_extractor.js  claude_conversation_extractor_enhanced.js  claude_conversation_token_estimator.py  claude_extractor_ryanshiang.js  clean_conversation.py  comprehensive_conversation_extractor.js  conversation.md  emotional_conversation_replayer.py  enhanced_conversation_extractor.js  health_check.py  json_conversation_to_markdown.py  process_conversation.py  process_conversation_enhanced.py  requirements.txt  safari_claude_extractor.js  safari_conversation_extractor.js  safari_conversation_extractor_buildfilename.js  setup_database.py  token_analysis.diff
scripts/conversation_replayer/: Makefile  README.md  conversation_validator.py  emotional_conversation_replayer.py  example_conversation.json  example_conversation_enhanced.json  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py  validate_conversation.py
scripts/conversation_replayer/tests/: __init__.py  conftest.py  test_conversation_validator.py  test_model_manager.py  test_replayer.py
scripts/fb83ec9b-9c1b-40f3-a51f-68293d2744c6/: architecture_elegance.md  collaboration_patterns.md  implementation_summary.md
tests/: conftest.py
tests/fixtures/test_conversations/: conversation.json  test_conversation.json
tests/integration/: test_conversation_replay_integration.py  test_end_to_end_pipeline.py  test_processing_pipeline_integration.py  test_vector_store_integration.py
tests/unit/: test_batch_verification_contracts.py  test_conversation_processor_contracts.py  test_conversation_segmenter.py  test_data_integrity_contracts.py  test_emotion_aware_embedder_contracts.py  test_emotion_classifier.py  test_technical_detector_contracts.py  test_vector_store_contracts.py  test_vector_store_unhappy_paths.py  test_vector_store_verification.py
tools/: claude_conversation_splitter.py  claude_conversation_token_estimator.py
